--- a/procesamiento/procesamiento datasets.ipynb
+++ b/procesamiento/procesamiento datasets.ipynb
@@ -103,7 +103,7 @@
     "for line in lectorcsv2:\n",
     "    ciudad_prov [unidecode(line['city'])] = line ['admin_name']\n",
     "\n",
-    "ciudad_prov ['Buenos Aires'] = 'Ciudad Autónoma de Buenos Aires'"
+    "ciudad_prov ['Buenos Aires'] = 'Ciudad Autónoma de Buenos Aires' # Buenos Aires se hace a mano porque esta mal escrito en el dataset."
    ]
   },
   {
@@ -151,6 +151,24 @@
    "metadata": {},
    "source": [
     "Para cada fila restante en el archivo de entrada se agrega el nombre de la provincia a la linea utilizando el diccionario previamente creado (se utiliza unidecode para evitar errores por tildes), dado que en el dataset ar.csv NO estan todas las ciudades de las provincias, si sucede que la ciudad del aeropuerto no esta en el diccionario, utilizo la provincia del mismo dataset de los aeropuertos en la columna 10 (invocando la funcion renombrar_prov que elimina la palabra 'province'). Posteriormente, se intenta convertir el valor en la sexta columna (la cual es la elevacion del aeropuerto) a un número flotante. Si la conversión es exitosa, se procede a determinar la categoría de elevación ('bajo', 'medio' o 'alto') y se agrega al archivo csv en la columna creada previamente. Si la conversión falla (porque la linea esta vacia o no es un numero), se captura la excepción ValueError y se agrega la cadena 'Sin altura' a la fila.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lectura.close()\n",
+    "lectura2.close()\n",
+    "escritura.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cierre de archivos."
    ]
   },
   {
@@ -457,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
