--- a/consultas/Consulta1,2 y 3.ipynb
+++ b/consultas/Consulta1,2 y 3.ipynb
@@ -22,7 +22,6 @@
    "source": [
     "import csv\n",
     "from pathlib import Path\n",
-    "actpath= Path.cwd()\n",
     "input_file = Path('../datasets_custom/ar-airports-custom.csv')"
    ]
   },
@@ -40,7 +39,7 @@
    "outputs": [],
    "source": [
     "lectura= open (input_file, mode='r', encoding='UTF-8')\n",
-    "lector= csv.reader(lectura)\n"
+    "lector= csv.reader(lectura)"
    ]
   },
   {
