Principio desarrollo juego.py

--- a/consultas/Consulta1,2 y 3.ipynb
+++ b/consultas/Consulta1,2 y 3.ipynb
@@ -59,7 +59,7 @@
     "next(lector)\n",
     "for line in lector:\n",
     "    if not line[2] in types:\n",
-    "        types.append (line[2]) \n"
+    "        types.append (line[2]) "
    ]
   },
   {
