fin act 6 enunciado 15

--- a/presentacion_final/presentacion.ipynb
+++ b/presentacion_final/presentacion.ipynb
@@ -115,12 +115,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solucion propuesta:"
+    "¿Cuál es el problema? \n",
+    "\n",
+    "El problema es que no se busca sobre el archivo csv los datos que coinciden con la provincia \"Buenos Aires\" Debido a que el objeto\n",
+    "reader es un iterable que a puede ser utilizado una unica vez ya que el mismo se consume luego de cada iteracion.\n",
+    "\n",
+    "Soluciones propuestas:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -135,6 +140,10 @@
     }
    ],
    "source": [
+    "# Cargar todo el archivo en una lista para asi poder iterarlo multiples veces.\n",
+    "# Ventaja: Simplicidad para acceder a los datos del archivo, no es necesario abrir el archivo varias veces.\n",
+    "# Deventaja: Cargar todo el archivo en memoria no suele ser la opcion mas eficiente.\n",
+    "\n",
     "import csv\n",
     "\n",
     "name_file = 'lagos_arg.csv'\n",
@@ -146,6 +155,43 @@
     "    \n",
     "    for pcia in pcias:\n",
     "        for row in data:\n",
+    "            if row[1] == pcia:\n",
+    "                print(\"El lago\", row[0], \"está en\", pcia)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El lago Lago Yehuin está en Tierra del Fuego, Antártida e Islas del Atlántico Sur\n",
+      "El lago Lago Chepelmut está en Tierra del Fuego, Antártida e Islas del Atlántico Sur\n",
+      "El lago Lago Río Bueno está en Tierra del Fuego, Antártida e Islas del Atlántico Sur\n",
+      "El lago Lago Epecuén está en Buenos Aires\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Volver a abrir el archivo para reiniciar el reader en cada provincia.\n",
+    "# Ventaja: Uso de memoria mas eficiente ya que no se carga todo el archivo.\n",
+    "# Deventaja: Reabrir el archivo repetidas veces puede ser un poco lento.\n",
+    "\n",
+    "import csv\n",
+    "\n",
+    "name_file = 'lagos_arg.csv'\n",
+    "\n",
+    "pcias = [\"Tierra del Fuego, Antártida e Islas del Atlántico Sur\", \"Buenos Aires\"]\n",
+    "\n",
+    "for pcia in pcias: # Abrir el archivo por cada provincia.\n",
+    "    with open(name_file, encoding='utf-8') as data_set:\n",
+    "        reader = csv.reader(data_set, delimiter=',')\n",
+    "        header = next(reader) \n",
+    "\n",
+    "        for row in reader:\n",
     "            if row[1] == pcia:\n",
     "                print(\"El lago\", row[0], \"está en\", pcia)\n"
    ]
