--- a/presentacion_final/presentacion.ipynb
+++ b/presentacion_final/presentacion.ipynb
@@ -3515,7 +3515,13 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    },
+    "tags": []
+   },
    "source": [
     "### Enunciado 12 Python Plus - Rosli\n",
     "![image.png](attachment:image.png)\n",
@@ -3527,7 +3533,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3549,7 +3561,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    },
+    "tags": []
+   },
    "source": [
     "Este código se puede mejorar reemplazando la función double(x) por una función lambda (dado que es una función simple), guardando los elementos modificados en una nueva lista para luego imprimirlos en pantalla."
    ]
@@ -3557,7 +3575,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3590,7 +3614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
