--- a/presentacion_final/presentacion.ipynb
+++ b/presentacion_final/presentacion.ipynb
@@ -25,9 +25,12 @@
    },
    "source": [
     "## 1- ¿Cómo divimos el trabajo y cómo nos organizamos con el repositorio?\n",
-    "#### Inicio, Datos y Ranking: Bauti\n",
-    "#### Juego: Nacho\n",
-    "#### Estadísticas: Santi y Fede"
+    "#### Inicio: Bienvenida y funcionamiento del juego (Bauti)\n",
+    "#### (P1) Datos: Visualización de la info del juego con gráficos y mapas. (Bauti)\n",
+    "#### (P2) Juego: Juego de trivia con selección de usuario, temática y dificultad. (Nacho)\n",
+    "#### (P3) Formulario de registro: Crear cuenta para jugar. \n",
+    "#### (P4) Ranking: Info de la última jugada y de mejores puntajes. (Bauti)\n",
+    "#### (P5) Estadisticas: Estadísticas de las jugadas. (Santi y Fede)"
    ]
   },
   {
@@ -49,17 +52,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": "slide"
-    },
-    "tags": []
-   },
+   "metadata": {},
    "source": [
-    "## 3- ¿Qué complicaciones tuvimos a la hora de desarrollar la aplicación?\n",
-    "#### - Delay en el sign in, cuando no existían usuarios cargados\n",
-    "#### - Problema en la implementación de las dificultades en la temática de conectividad"
+    "## 3- Primera complicación que tuvimos y cómo la solucionamos\n",
+    "#### - Delay en el sign in, cuando no existían usuarios cargados.\n",
+    "#### - Solución: Log in automático al registrarse ."
    ]
   },
   {
@@ -72,9 +69,9 @@
     "tags": []
    },
    "source": [
-    "## 4- ¿Cómo las solucionamos?\n",
-    "#### - Log in automático al registrarse \n",
-    "#### - Implementación de un timer a la hora de jugar "
+    "## 4- Segunda complicación que tuvimos y cómo la solucionamos\n",
+    "#### - Problema en la implementación de las dificultades en la temática de conectividad\n",
+    "#### - Solución: Implementación de un timer a la hora de jugar "
    ]
   },
   {
